<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context="ru.alexis.yandextranslate.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_orange_light"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/langFrom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:onClick="onclickLang"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:text="Русский" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/arrows"
            android:contentDescription="swap langs"
            android:onClick="swapLanguages"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/langTo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:onClick="onclickLang"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="Английский" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="20dp"
        android:layout_height="44dp"
        android:layout_gravity="top|end"
        android:layout_marginBottom="-55dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:background="@drawable/speak"
            android:contentDescription="@string/sound"
            android:onClick="speakText"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignBottom="@+id/imageButton"
            android:layout_alignParentBottom="true"
            android:background="@drawable/listen"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/sound"
            android:onClick="listenText"
            android:scaleType="centerCrop" />
    </RelativeLayout>

    <EditText
        android:id="@+id/textTranslate"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:gravity="top"
        android:hint="@string/enter_text_for_translate"
        android:inputType="textNoSuggestions"
        android:maxLines="1"
        android:text=""
        tools:layout_height="80dp" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_gravity="start"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="-30dp"
        android:background="@android:drawable/ic_menu_close_clear_cancel"
        android:onClick="clearText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_gravity="start"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="-30dp"
        android:background="@android:drawable/checkbox_on_background"
        android:onClick="translateText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">


        <ScrollView
            android:id="@+id/scrollTranslatedText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fillViewport="false">

            <TextView
                android:id="@+id/translatedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </ScrollView>

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical"
            android:scrollbarSize="0dp">

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/listen"
                android:contentDescription="@string/sound"
                android:onClick="listenText"
                android:scaleType="centerCrop" />

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bookmark"
                android:contentDescription="@string/bookmark"
                android:onClick="bookmarkText" />

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/upload"
                android:contentDescription="@string/upload"
                android:onClick="uploadText" />

            <ImageButton
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/resize"
                android:contentDescription="@string/fullscreen"
                android:fadingEdge="none"
                android:onClick="resizeWindow"
                android:scaleType="centerCrop" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/copyright" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-16dp"
        android:layout_marginEnd="-16dp"
        android:layout_marginLeft="-16dp"
        android:layout_marginRight="-16dp"
        android:layout_marginStart="-16dp"
        android:orientation="horizontal">

        <android.support.design.widget.TabLayout
            android:id="@+id/bottomtab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@android:color/holo_orange_light"
            app:tabIndicatorHeight="3dp">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:icon="@drawable/lngs"
                android:scrollbarSize="@dimen/activity_horizontal_margin"
                android:scrollbars="horizontal" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/bigbookmark" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/bigsettings" />
        </android.support.design.widget.TabLayout>

    </LinearLayout>

</LinearLayout>
